<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E67CC"
    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".ui.main.WelcomeDashboardActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/welcome_dashboard_image"
        android:src="@drawable/ic_quick_overview_welcome"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_welcome_dash"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_welcome_dash"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/btn_login_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/round_corners_button"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/login"
        android:foreground="?attr/selectableItemBackground"
        android:textColor="#2E67CC" />

    <Button
        android:id="@+id/btn_create_account_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="20dp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/round_corners_border_button"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/sign_up"
        android:textColor="@color/white" />

</LinearLayout>
