<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/choose_take"
        android:layout_marginBottom="10dp"
        android:background="@color/grey"
        android:padding="8dp">

        <Button
            android:id="@+id/choose_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_from_library"
            android:fontFamily="@font/california_fb"
            android:layout_gravity="center_vertical"
            android:padding="8dp"/>
        <Button
            android:id="@+id/take_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_photo"
            android:fontFamily="@font/california_fb"
            android:layout_gravity="center_vertical"
            android:padding="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cancelLinearLayout"
        android:background="@color/grey"
        android:padding="8dp">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:fontFamily="@font/california_fb"
            android:layout_gravity="center_vertical"
            android:padding="8dp"/>

    </LinearLayout>
</LinearLayout>
